<resources>
    <string name="app_name">FreeApp</string>
    <!--<string name="title_activity_login">WhatsFree</string>-->
    <string name="login">LOGIN</string>
    <string name="register_question">No account yet ? Create one</string>
    <string name="register">SIGN UP</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="username">Username </string>
    <string name="password">Password </string>
    <string name="Search">Search </string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="title_activity_whats_new_tab">WhatsNewTabActivity</string>
    <string name="title_activity_around_you_tab">AroundYouTabActivity</string>
    <string name="title_activity_categories_tab_activities">CategoriesTabActivities</string>
    <string name="title_activity_categories_tab">CategoriesTabActivity</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>

    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>home</item>
        <item>Food</item>
        <item>Sport</item>
        <item>Nightlife</item>
        <item>Culture</item>
        <item>Lifestyle</item>
        <item>Clothes</item>
        <item>logout</item>
    </string-array>


    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <!--
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>
    -->


    <string name="action_example">Example action</string>
    <string name="title_activity_sport">SportActivity</string>
    <string name="title_activity_food">FoodActivity</string>
    <string name="title_activity_night_life">NightLifeActivity</string>
    <string name="title_activity_culture">CultureActivity</string>
    <string name="title_activity_lifestyle">LifestyleActivity</string>
    <string name="title_activity_clothes">ClothesActivity</string>
    <string name="title_activity_miscellaneous">MiscellaneousActivity</string>


    <string name="one">What\'s new</string>
    <string name="two">Categories</string>
    <string name="three">Around you</string>
    <string name="title_activity_display_submissions">DisplaySubmissionsActivity</string>


    <string name="title_activity_create_new_submission">CreateNewSubmission</string>
    <string name="description">Description </string>
    <string name="name_of_event">Whats Free </string>
    <string name="location">Location</string>
    <string name="categories">Category</string>
    <string name="set_date">Set Date</string>

    <string name="start_time">Starts</string>
    <string name="end_time">Ends</string>
    <string name="existImage">OPEN EXISTING IMAGE</string>
    <string name="takeImage">TAKE PHOTO</string>
    <string name="keyword">Key Words</string>
    <string name="create">CREATE</string>
    <string name="pictureOFLocation">LocationPicture</string>


    <string name="new_submission">New Submission</string>
    <string name="map_mode">Map mode</string>
    <string name="search">Search</string>
    <string name="report">Report</string>
    <string-array name="categories">

        <item>Food</item>
        <item>Clothing</item>
        <item>Sport</item>
        <item>Culture</item>
        <item>NightLife</item>
        <item>Lifestyle</item>
        <item>Miscellaneous</item>
    </string-array>

    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_search">SearchActivity</string>


    <string name="title_activity_location">LocationActivity</string>

    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>
    <string name="ok">OK</string>
    <string name="filterSubmissions">Filter</string>
    <string name="time">By Time</string>
    <string name="byLikes">By Likes</string>
    <string name="byName">By Name</string>
    <string name="byLocation">By Location</string>
    <string name="description_image">Submission\'s Image</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="location_not_provided">Location not provided</string>
    <string name="map_button">Switch to Map</string>
    <string name="row_submission_image">Submission\'s Image</string>
    <string name="submission_thumbnail">Submission\'s thumbnail</string>
</resources>
