<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Search / should always be displayed -->
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <!-- Display map -->
    <item android:id="@+id/action_map_mode"
        android:icon="@drawable/ic_action_map"
        android:title="@string/map_mode"
        app:showAsAction="ifRoom|collapseActionView" />

    <!-- Display new submission icon -->
    <item android:id="@+id/action_new_submission"
        android:icon="@drawable/ic_action_new"
        android:title="@string/new_submission"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>