<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.freeapp.CreateNewSubmissionActivity"

    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint = "@string/name_of_event"
            android:ems="10"
            android:id="@+id/NameOfEvent"
            android:layout_marginTop="30dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Description"
            android:hint = "@string/description"
            android:layout_marginTop="20dp"
            android:inputType = "textPersonName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id ="@+id/Location"
            android:hint = "@string/location"
            android:layout_marginTop="20dp"
            android:inputType = "textPersonName" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/categories"
                android:layout_gravity="center_vertical"
                android:id="@+id/categoriesText"
                android:layout_marginLeft="2dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categories"
                android:layout_row="0"
                android:layout_column="1"
                android:backgroundTint="#ff474d"
                android:gravity="right" />

        </GridLayout>


        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id ="@+id/setDateButton"
                android:text = "@string/set_date"
                android:onClick="onSetDateClicked"
                android:layout_row="0"
                android:layout_column="0"
                />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id = "@+id/date"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="right" />

        </GridLayout>





    </LinearLayout>


</ScrollView>
